src/objects/Success_Coach_Case_Flag_Rule__c.object
<CustomObject><fields>
        <fullName>Flag_Key__c</fullName>
        <description>A unique key name used for identifying the variable in SQL.</description>
        <inlineHelpText>A unique key name used for identifying the variable in SQL.</inlineHelpText>
        <label>Flag Key</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Flag_Value__c</fullName>
        <description>The actual value of the key to be used in the SQL stored procedure.</description>
        <inlineHelpText>The actual value of the key to be used in the SQL stored procedure.</inlineHelpText>
        <label>Flag Value</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Success_Coach_Case_Flag__c</fullName>
        <label>Success Coach Case Flag</label>
        <referenceTo>Success_Coach_Case_Flag__c</referenceTo>
        <relationshipLabel>Success Coach Case Flag Rules</relationshipLabel>
        <relationshipName>Success_Coach_Case_Flag_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>An object used to store variable values used within the SQL Case creation stored procedures.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Success Coach Case Flag Rule</label><nameField>
        <displayFormat>SCCFR-{0}</displayFormat>
        <label>Success Coach Case Flag Rule ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Success Coach Case Flag Rules</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>